--- a/Project_2C_Vincent.ipynb
+++ b/Project_2C_Vincent.ipynb
@@ -5,7 +5,7 @@
    "id": "7263c8e5",
    "metadata": {},
    "source": [
-    "# Project 2C - Vincent Kuai"
+    "# Project 2C - Vincent Kuai (DRAFT)"
    ]
   },
   {
